--- a/my-implementation/index.html
+++ b/my-implementation/index.html
@@ -7,7 +7,7 @@
     <p>Tempo Slider is Currently Under Development</p>
 
     <link rel="stylesheet" href="css/main.css">
-    <script src="//cwilso.github.io/AudioContext-MonkeyPatch/AudioContextMonkeyPatch.js"></script>
+    <script src="./js/monkeypatch.js"></script>
     <script src="js/metronome.js"></script>
   </head>
   <body>
