--- a/my-implementation/index.html
+++ b/my-implementation/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width user-scalable=no">
-    <title>Metronome</title>
+    <title>Metronome Web App</title>
     <p>Tempo Slider is Currently Under Development</p>
 
     <link rel="stylesheet" href="css/main.css">
@@ -11,7 +11,7 @@
     <script src="js/metronome.js"></script>
   </head>
   <body>
-
+<p> Soon to be expanded to a web aduio playground that lives in the browser!</p>
     <div id="controls">
       <div><a class="play" onclick="this.innerText = play();">play</a></div>
       <div id="tempoBox">Tempo: <span id="showTempo">120</span>BPM <input id="tempo" type="range" min="30.0" max="160.0" step="1" value="120" style="height: 20px; width: 200px" onInput="tempo = event.target.value; document.getElementById('showTempo').innerText=tempo;"></div>
