documentation refactor & bug fixes as well as partially completed README

--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
   <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Type" content="text/html; charset = UTF-8">
+  <meta http-equiv="Content-Type" content="text/html">
+  <meta name="Author" content="Bryan Guner">
+  <meta name="keywords" content="HTML, Meta Tags, Metadata">
+  <meta name="description" content="Learning about Web Development.">
+  <meta name="revised" content="Bryan Guner 4/16/2021">
   <meta http-equiv="Content-Type" content="text/html">
   <meta name="Author" content="Bryan Guner">
 <link rel="stylesheet" href="./assets/prism.css">
  <link rel="stylesheet" href="./assets/style.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
  <script async defer src="./assets/prism.js"></script>
   <title> directory </title>
 
