--- a/alt-implementation-number3/index.html
+++ b/alt-implementation-number3/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <meta http-equiv="Content-Type" content="text/html; charset = UTF-8">
+    <meta http-equiv="Content-Type" content="text/html">
+    <meta name="Author" content="Bryan Guner">
+    <meta name="keywords" content="HTML, Meta Tags, Metadata">
+    <meta name="description" content="Learning about Web Development.">
+    <meta name="revised" content="Bryan Guner 4/16/2021">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Metronome</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
